<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="ktu.edu.projektas.app.data.User" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.ui.User.ProfileFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView

                    android:layout_width="100dp"
                    android:layout_gravity="center"
                    android:layout_height="100dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/ic_person"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/profile_icon"
                    app:tint="@color/teal_regular" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine">


                <TextView

                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_weight="1"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/name"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_weight="1"
                    android:id="@+id/fullname"

                    android:text="@{user.firstName }"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine">

                <TextView

                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/surname"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{user.lastName}"
                    android:id="@+id/lastname"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine">

                <TextView

                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/email"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{user.email}"
                    android:id="@+id/email"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine">

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/group"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/layout_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{user.group}"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine">


                <TextView

                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/role"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/layout_role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{user.role}"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/button_change"
                    android:layout_width="200dp"
                    android:text="@string/change_password"
                    android:layout_height="50dp">
                </Button>

                <Button
                    android:id="@+id/button_logout"
                    android:layout_width="200dp"
                    android:text="@string/log_out"
                    android:layout_height="50dp">
                </Button>

            </LinearLayout>




        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>