<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateEvent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_first_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/first_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintBottom_toTopOf="@+id/et_last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_last_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/last_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintBottom_toTopOf="@+id/et_email"
            app:layout_constraintEnd_toEndOf="@+id/et_first_name"
            app:layout_constraintStart_toStartOf="@+id/et_first_name"
            app:layout_constraintTop_toBottomOf="@+id/et_first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/email_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintBottom_toTopOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="@+id/et_last_name"
            app:layout_constraintStart_toStartOf="@+id/et_last_name"
            app:layout_constraintTop_toBottomOf="@+id/et_last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@+id/et_repeat_password"
            app:layout_constraintEnd_toEndOf="@+id/et_email"
            app:layout_constraintStart_toStartOf="@+id/et_email"
            app:layout_constraintTop_toBottomOf="@+id/et_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_repeat_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/repeat_password"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@+id/et_group"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_group"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/academic_group_for_students"
            app:layout_constraintBottom_toTopOf="@+id/bt_register"
            app:layout_constraintEnd_toEndOf="@+id/et_repeat_password"
            app:layout_constraintStart_toStartOf="@+id/et_repeat_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_register"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_group"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@+id/et_group" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
